# git-client

./: package-lock.json  package.json
git-api/: Cargo.toml
git-api/src/: lib.rs
git-api/src/application/: command.rs  git_branch_usecase.rs  input_to_command.rs  mod.rs
git-api/src/domain/: command.rs  handler.rs  mod.rs
git-api/src/domain/value/: mod.rs
git-api/src/infrastructure/: command.rs  command_factory.rs  handler.rs  mod.rs
git-api/src/infrastructure/domain_service/: git_branch_command_domain_service.rs  mod.rs
git-api/src/presentation/: api.rs  mod.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/core/: git_commands.rs
src-tauri/src/types/: errors.rs
src/components/atoms/: Canvas.tsx
src/components/organizations/: GitLogVisualizer.tsx
