[package]
name = "git-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7.0"
chrono = { version="0.4.23", features = ["serde"] }
mockall = "0.11.3"
